--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
             </div>
             <div class="menu-bottom"></div>
        </div>
+
+       <div class="nextgame">
+            <h4>Proximo Jogo</h4>
+           <a href=""> <img src="nextgame.png"></a>
+       </div>
     </body>
 </html>
