--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <html>
     <head>
-        <title>Guarani Esporte Clube - CE</title>
-        <link rel="icon" 
-      type="image/jpg" 
-      href="GUARANI DE JUAZEIRO DO NORTE.png" />
-        <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-    </head>
+        <link rel="icon"  type="image/jpg" href="" />
+          <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+        </head>
     <body>
-       <div class="menu">
-            <div class="menu-top">
-                <img src="GUARANI DE JUAZEIRO DO NORTE.png">
-                <h1>GUARANI</h1>
-            </div>
-            <div class="menu-bottom"></div>
-       </div>
+        <script src="https://kit.fontawesome.com/1cd113c3b4.js" crossorigin="anonymous"></script>
 
-       <div class="nextgame">
-            <h4>Proximo Jogo</h4>
-           <a href=""> <img src="nextgame.png"></a>
-       </div>
+        <div>
+            <h1>HELLO,</h1>
+            <h2>MY NAME IS <span style="color:#1ed760">LUAN</span></h2>
+            <p>&lt/systems analysis&gt</p>
+        
+        </div>
+        <div class="language">
+            <a href="" style="color:#1ed760 ;">EN</a>
+            <a href="">BR</a>
+        </div>
+        <div class="icons">
+            <a href="" style="text-decoration: none;"><i class="fa-brands fa-facebook-f"></i></a>       
+            <a href="https://twitter.com/luanduartesv" target="_blank" style="text-decoration: none;"><i class="fa-brands fa-twitter"></i></a> 
+            <a href="https://www.instagram.com/luanduartesv/" target="_blank" style="text-decoration: none;"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <div class="menu">
+            <div class="botao" >
+                <input type="checkbox" id="chec">
+                <label for="chec">
+                    <i class="fa-solid fa-bars fa-2x" ></i>
+                </label>
+                
+            </div>
+            <div class="bottons">
+                <ul>
+                    <li><a href="">Contacts</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li><a href="">Github</a></li>
+
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
